# datatest

./: .gitignore  README.md  pyproject.toml  requirements.txt
assertions/: base.py  columns.py  df.py
core/: TestCases.py  assertions.py  exceptions.py  testpipe.py  validators.py
core/assertions/: base.py  columns.py  df.py
test/: test.ipynb
