[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datatest"
authors = [{name = "Aziz Nadirov", email = "aziznadirov@yahoo.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License",
                "Development Status :: 4 - Beta",
                "Intended Audience :: Developers",
                "Operating System :: OS Independent"]

dynamic = ["version", "description"]

requires-python = ">=3.9,<3.11"
dependencies = [
    "pandas >=2,<3",
    "pandera >=0.18.0",
    "validators >=0.28.0"
]

keywords = ["pipeline", "test", "data"]

[project.urls]
Source = "https://github.com/AzizNadirov/datatest"