[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
version = "0.0.1"
description = "DataTest: Micro library for write unittest-like tests(assertions) for Data Science projects."
name = "datatest"
authors = [{name = "Aziz Nadirov", email = "aziznadirov@yahoo.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License",
                "Development Status :: 4 - Beta",
                "Intended Audience :: Developers",
                "Operating System :: OS Independent"]

requires-python = ">=3.9,<3.12"
dependencies = [
    "pandas >=2,<3",
    "pandera >=0.18.0",
    "validators >=0.28.0"
]

keywords = ["pipeline", "test", "data"]

[project.urls]
Source = "https://github.com/AzizNadirov/datatest"